fixed code block spacing for copy button and also fixed codeblock scroll bar uglyness

--- a/src/styles/scrollbar.css
+++ b/src/styles/scrollbar.css
@@ -1,7 +1,7 @@
 .scrollbar {
 ::-webkit-scrollbar {
     width: 4px;
-    height: 10px;
+    height: 4px;
   }
   ::-webkit-scrollbar-button {
     width: 0px;
